<resources>
    <string name="app_name" translatable="false">SpaceApp</string>
    <string name="app_title" translatable="false">Space Explorer</string>

    <!-- Shared preferences -->
    <string name="dark_mode_key" translatable="false">darkModeKey</string>

    <!-- Languages -->
    <string name="current_language">English</string>
    <string name="current_language_tag">en</string>
    <string name="english" translatable="false">English</string>
    <string name="english_code" translatable="false">en</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="russian_code" translatable="false">ru</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="storage_usage">Storage usage</string>
    <string name="traffic_usage">Traffic usage</string>
    <string name="disk_and_network_usage">Disk and network usage</string>
    <string name="theme_settings">Theme settings</string>
    <string name="language_settings">Language settings</string>
    <string name="clear_storage">Clear storage</string>

    <!-- Commons -->
    <string name="label_name">Name</string>
    <string name="label_description">Short description</string>
    <string name="label_counter">%1$d/%2$d</string>

    <!-- Menu -->
    <string name="label_planets">Planets</string>
    <string name="label_astronauts">Astronauts</string>
    <string name="label_space_stations">Space stations</string>
    <string name="label_orbital_launches">Orbital launches</string>
    <string name="label_events">Events</string>
    <string name="description_planets_option">Explore planet data of Solar System</string>
    <string name="description_space_stations_option">Observe space station data</string>
    <string name="description_astronauts_option">Explore who is in space right now</string>
    <string name="description_orbital_launches_option">Look what rockets are about to launch</string>
    <string name="description_events_option">Study upcoming events</string>

    <!-- Drawer menu -->
    <string name="title_language">Language</string>
    <string name="title_data">Data</string>
    <string name="title_camera">Camera</string>
    <string name="title_settings">Settings</string>

    <!-- Drawer toggle -->
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>

    <!-- Launch -->
    <string name="label_mission">Mission</string>
    <string name="label_location">Location</string>
    <string name="label_pad">Pad</string>
    <string name="label_organization">Organization</string>
    <string name="label_launch_date_title">Launch date</string>
    <string name="label_launched">Launched</string>

    <!-- Astronaut item -->
    <string name="description_spacecraft">Spacecraft: %1$s</string>

    <!-- Astronaut -->
    <string name="label_name_surname">First and last name</string>
    <string name="label_country">Country</string>
    <string name="label_date_of_birth">Date of birth</string>
    <string name="label_first_flight_date">First flight</string>
    <string name="label_last_flight_date">Last flight</string>
    <string name="label_short_biography">Short biography</string>
    <string name="label_spacecraft_name">Spacecraft</string>

    <!-- Space station item -->
    <string name="description_date_of_operation">Date of operation %1$s</string>

    <!-- Space station -->
    <string name="label_space_station_name">Space station name</string>
    <string name="label_date_of_operation">Date of operation</string>
    <string name="label_owners">Owners</string>
    <string name="label_status">Status</string>
    <string name="label_active">Active</string>
    <string name="label_deactivated">Not active</string>

    <!-- Celestial Body -->
    <string name="label_date_of_discovery">Date of discovery</string>
    <string name="label_discoverer">Discoverer</string>
    <string name="label_gravity">Gravity</string>
    <string name="label_density">Density</string>
    <string name="label_area">Area</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_day_period">Day period</string>
    <string name="label_year_period">Year period</string>
    <string name="label_orbital_speed">Orbital speed</string>
    <string name="label_satellites_count">Satellites count</string>
    <string name="description_temperatures">%1$s ~ %2$s°C</string>
    <string name="description_gravity">%1$s m/s²</string>
    <string name="description_density">%1$s g/cm³</string>
    <string name="description_year_period">%1$s, %2$s, %3$s</string>
    <string name="description_area">%1$s · 10⁷ km²</string>
    <string name="description_orbital_speed">%1$s km/s</string>

    <!-- Event -->
    <string name="label_event_completed">Event is completed</string>
    <string name="label_event_date_title">Event date</string>
    <string name="label_event_type_title">Event type</string>

    <plurals name="years">
        <item quantity="one">%1$d year</item>
        <item quantity="other">%1$d years</item>
    </plurals>

    <plurals name="days">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">%1$d hour</item>
        <item quantity="other">%1$d hours</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>

    <string name="hint_update">Update data</string>

    <!-- Toast text -->
    <string name="toast_loading">Updating data…</string>
    <string name="toast_unable_to_update">Unable to update data</string>

    <!-- Error messages -->
    <string name="message_error_unable_to_update">Unable to update data. Check internet connection and try again.</string>
    <string name="button_try_again">Try again</string>

    <!-- File size -->
    <string name="bytes">Bytes</string>
    <string name="kilobyte">KB</string>
    <string name="megabyte">MB</string>
    <string name="gigabyte">GB</string>
    <string name="terabyte">TB</string>
</resources>