<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPlanetsOption"
                style="@style/CardViewItemStyleV2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_card_view_height">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_planets"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvPlanetsOptionName"
                        style="@style/AppTheme.Text.Title.H3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/base_margin"
                        android:text="@string/label_planets"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toTopOf="@+id/tvPlanetsOptionDescription"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tvPlanetsOptionDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/base_margin"
                        android:text="@string/description_planets_option"
                        android:textAppearance="@style/AppTheme.Text.Subtext.H4"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvPlanetsOptionName" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewLaunchOption"
                style="@style/CardViewItemStyleV2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_card_view_height">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_launch"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvLaunchOptionName"
                        style="@style/AppTheme.Text.Title.H3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/base_margin"
                        android:text="@string/label_orbital_launches"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toTopOf="@+id/tvLaunchOptionDescription"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tvLaunchOptionDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/base_margin"
                        android:text="@string/description_orbital_launches_option"
                        android:textAppearance="@style/AppTheme.Text.Subtext.H4"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvLaunchOptionName" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewAstronautOption"
                style="@style/CardViewItemStyleV2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_card_view_height">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_astronaut"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/tvAstronautOptionName"
                        style="@style/AppTheme.Text.Title.H3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/base_margin"
                        android:text="@string/label_astronauts"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toTopOf="@+id/tvAstronautOptionDescription"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tvAstronautOptionDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/base_margin"
                        android:text="@string/description_astronauts_option"
                        android:textAppearance="@style/AppTheme.Text.Subtext.H4"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvAstronautOptionName" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSpaceStationOption"
                style="@style/CardViewItemStyleV2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_card_view_height">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_space_station"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvSpaceStationOptionName"
                        style="@style/AppTheme.Text.Title.H3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/base_margin"
                        android:text="@string/label_space_stations"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toTopOf="@+id/tvSpaceStationOptionDescription"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tvSpaceStationOptionDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/base_margin"
                        android:text="@string/description_space_stations_option"
                        android:textAppearance="@style/AppTheme.Text.Subtext.H4"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvSpaceStationOptionName" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>